@@ -1,11 +1,9 @@
 require 'rubygems/command'
-require 'rubygems/command_aids'
 require 'rubygems/commands/query_command'
 
 module Gem
   module Commands
     class ListCommand < QueryCommand
-      include CommandAids
 
       def initialize
         super(
