@@ -25,6 +25,8 @@
 	nesting.
 	* lib/rubygems/indexer/compressor.rb: Only used in
 	Gem::Indexer::AbstractIndexBuilder subclasses, merged there.
+	* lib/rubygems/command_aids.rb: Merged Gem::CommandAids into
+	Gem::Command since that's the only place it gets used.
 
 2007-08-24  Eric Hodel  <drbrain@segment7.net>
 
